<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.lebelle.cryptobalance.controllers.ConvertCurrencyActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:fitsSystemWindows="true"
            android:minHeight="55dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:padding="16dp">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/calender"
            style="@style/Widget.Text1"/>

        <android.support.v7.widget.AppCompatTextView
            style="@style/HeadingStyle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency_board" />

        <android.support.v7.widget.CardView
            android:id="@+id/card_board"
            style="@style/CardTwo">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:baselineAligned="false"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/coin_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp"
                        android:scaleType="centerInside"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        tool:text="BTC" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="5dp"
                        android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/coin_unicode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end|bottom"
                        android:scaleType="centerInside"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        tool:text="N" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/coin_rate"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        tool:text="1.00" />

                        </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1.5"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal">

                    <com.mikhaellopez.circularimageview.CircularImageView
                        android:id="@+id/bitcoin_image"
                        android:layout_width="@dimen/profile_pic_size"
                        android:layout_height="@dimen/profile_pic_size" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="3dp"
                        android:paddingEnd="3dp"
                        android:paddingLeft="3dp"
                        android:paddingStart="3dp"
                        android:layout_gravity="center"
                        android:contentDescription="@null"
                        android:src="@drawable/white_currency_exchange_512" />

                    <com.mikhaellopez.circularimageview.CircularImageView
                        android:id="@+id/flag_image"
                        android:layout_width="@dimen/profile_pic_size"
                        android:layout_height="@dimen/profile_pic_size"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.8"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/currency_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="end"
                        android:padding="7dp"
                        android:scaleType="centerInside"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        tool:text="NGN" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/currency_unicode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="end|bottom"
                            android:scaleType="centerInside"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            tool:text="N" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/currency_rate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            tool:text="43200000000" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.AppCompatTextView
            style="@style/HeadingStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency_converter" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/currency_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            tool:text="Nigerian Naira" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/name_input"
            style="@style/Widget.TextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/value_text_view"
                style="@style/Widget.TextEdit"
                android:hint="@string/amount"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="@dimen/padd_10"
            android:contentDescription="@null"
            android:src="@drawable/white_arrow_down" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/calculated_value_text"
            style="@style/Widget.Text"
            android:hint="Amount in Cryptocurrency"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/convert_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            android:elevation="4dp"
            android:text="@string/convert"
            android:textStyle="bold" />
    </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>
